--- a/pages/news-page.html
+++ b/pages/news-page.html
@@ -367,23 +367,172 @@
                     class="hero-section__background-img">
             </section>
 
-            <section class="images">
-                <div class="my-container images__container">
-                    <div class="images__content">
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
-                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+            <section class="news-info">
+                <div class="my-container news-info__container">
+                    <div class="news-info__body">
+                        <div class="news-info__desc">
+                            <div class="news-info__title">Основная мысль текста справа</div>
+                            <div class="news-info__texts">
+                                <div class="news-info__text">Ребёнок состоит из сотни. У ребёнка сто языков, сто рук, сто мыслей,
+                                    сто способов думать, играть и говорить. Сто, всегда сто способов слушать, восхищаться, любить.
+                                    Сто радостных чувств, чтобы петь и&nbsp;понимать, сто миров, чтобы совершать открытия, сто
+                                    миров, чтобы делать изобретения, сто миров, чтобы мечтать.</div>
+                            </div>
+                        </div>
+                        <div class="news-info__content">
+                            <div class="news-info__slider">
+                                <div class="news-info__swiper-controls">
+                                    <div class="swiper-pagination news-info__swiper-pagination"></div>
+                                    <div class="swiper-navigation news-info__swiper-navigation">
+                                        <div class="swiper-button-prev news-info__swiper-button-prev">
+                                            <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <g clip-path="url(#clip0_92_1209)">
+                                                    <path
+                                                        d="M21.0908 13.915L5.78616 13.915M5.78616 13.915L12.1631 20.292M5.78616 13.915L12.1631 7.53809"
+                                                        stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                        stroke-linejoin="round" />
+                                                </g>
+                                                <defs>
+                                                    <clipPath id="clip0_92_1209">
+                                                        <rect width="26" height="26" fill="white"
+                                                            transform="translate(0.438477 0.915039)" />
+                                                    </clipPath>
+                                                </defs>
+                                            </svg>
+                                        </div>
+                                        <div class="swiper-button-next news-info__swiper-button-next">
+                                            <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <g clip-path="url(#clip0_2050_215)">
+                                                    <path
+                                                        d="M5.78616 13.9151L21.0908 13.9151M21.0908 13.9151L14.7139 7.53811M21.0908 13.9151L14.7139 20.292"
+                                                        stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                        stroke-linejoin="round" />
+                                                </g>
+                                                <defs>
+                                                    <clipPath id="clip0_2050_215">
+                                                        <rect width="26" height="26" fill="white"
+                                                            transform="translate(0.438477 0.915039)" />
+                                                    </clipPath>
+                                                </defs>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper news-info__swiper">
+                                    <div class="swiper-wrapper news-info__swiper-wrapper">
+                                        <div class="swiper-slide news-info__swiper-slide">
+                                            <div class="news-info__slide"><img
+                                                    src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                                                    class="news-info__slide-img"></div>
+                                        </div>
+                                        <div class="swiper-slide news-info__swiper-slide">
+                                            <div class="news-info__slide"><img
+                                                    src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                                                    class="news-info__slide-img"></div>
+                                        </div>
+                                        <div class="swiper-slide news-info__swiper-slide">
+                                            <div class="news-info__slide"><img
+                                                    src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                                                    class="news-info__slide-img"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="big-images">
+                <div class="my-container big-images__container">
+                    <div class="big-images__content">
+                                                    <div class="big-images__slider">
+                                <div class="big-images__swiper-controls">
+                                    <div class="swiper-pagination big-images__swiper-pagination"></div>
+                                    <div class="swiper-navigation big-images__swiper-navigation">
+                                        <div class="swiper-button-prev big-images__swiper-button-prev">
+                                            <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <g clip-path="url(#clip0_92_1209)">
+                                                    <path
+                                                        d="M21.0908 13.915L5.78616 13.915M5.78616 13.915L12.1631 20.292M5.78616 13.915L12.1631 7.53809"
+                                                        stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                        stroke-linejoin="round" />
+                                                </g>
+                                                <defs>
+                                                    <clipPath id="clip0_92_1209">
+                                                        <rect width="26" height="26" fill="white"
+                                                            transform="translate(0.438477 0.915039)" />
+                                                    </clipPath>
+                                                </defs>
+                                            </svg>
+                                        </div>
+                                        <div class="swiper-button-next big-images__swiper-button-next">
+                                            <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <g clip-path="url(#clip0_2050_215)">
+                                                    <path
+                                                        d="M5.78616 13.9151L21.0908 13.9151M21.0908 13.9151L14.7139 7.53811M21.0908 13.9151L14.7139 20.292"
+                                                        stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                        stroke-linejoin="round" />
+                                                </g>
+                                                <defs>
+                                                    <clipPath id="clip0_2050_215">
+                                                        <rect width="26" height="26" fill="white"
+                                                            transform="translate(0.438477 0.915039)" />
+                                                    </clipPath>
+                                                </defs>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper big-images__swiper">
+                                    <div class="swiper-wrapper big-images__swiper-wrapper">
+                                        <div class="swiper-slide big-images__swiper-slide">
+                                            <div class="big-images__slide">
+                                                <div class="big-images__slide-img-wrap">
+                                                <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt="" class="big-images__slide-img">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide big-images__swiper-slide">
+                                            <div class="big-images__slide">
+                                                <div class="big-images__slide-img-wrap">
+                                                <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt="" class="big-images__slide-img">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide big-images__swiper-slide">
+                                            <div class="big-images__slide">
+                                                <div class="big-images__slide-img-wrap">
+                                                <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt="" class="big-images__slide-img">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="many-images">
+                <div class="my-container many-images__container">
+                    <div class="many-images__content">
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
                     </div>
                 </div>
             </section>
@@ -502,6 +651,65 @@
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
     <script src="../assets//js/sections/contacts.js"></script>
+    
+
+
+    <!-- СКРИПТЫ СТРАНИЦЫ -->
+    <script>
+        const newsInfoSwiper = new Swiper('.news-info__swiper', {
+            direction: 'horizontal',
+            slidesPerView: 1.15,
+            spaceBetween: 20,
+            pagination: {
+                el: '.news-info__swiper-pagination',
+            },
+            navigation: {
+                nextEl: '.news-info__swiper-button-next',
+                prevEl: '.news-info__swiper-button-prev',
+            },
+            breakpoints: {
+                769: {
+                    slidesPerView: 2.1,
+                    spaceBetween: 24,
+                },
+                992: {
+                    slidesPerView: 3,
+                    spaceBetween: 28,
+                },
+            },
+        });
+
+        const bigImagesSwiper = new Swiper(`.big-images__swiper`, {
+                direction: 'horizontal',
+                slidesPerView: 1.15,
+                spaceBetween: 20,
+                pagination: {
+                    el: '.big-images__swiper-pagination',
+                    type: 'custom',
+                    renderCustom: function (swiper, current, total) {
+                        return `${String(current).padStart(2, '0')}`;
+                    },
+                },
+                navigation: {
+                    nextEl: '.big-images__swiper-button-next',
+                    prevEl: '.big-images__swiper-button-prev',
+                },
+                breakpoints: {
+                    769: {
+                        spaceBetween: 30,
+                        slidesPerView: 2.1,
+                        allowTouchMove: true,
+                    },
+                    991: {
+                        slidesPerView: 2.1,
+                    },
+                    992: {
+                        allowTouchMove: false,
+                        spaceBetween: 0,
+                    }
+                }
+            });
+    </script>
 </body>
 
 </html>
