--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         
         <main class="main">
             <!-- ОФОРМЛЕНИЕ ВЫНЕС ОТДЕЛЬНО, НО ДЛЯ ГЛАВНОЙ СТИЛИ ОТСЛИЧАЮТСЯ, ВАЖНО СОХРАНИТЬ СТИЛИ ДЛЯ ЭТОГО БЛОКА ОТДЕЛЬНО И НЕ ПОДКЛЮЧАТЬ ЖЕЛАТЕЛЬНО СЮДА ./styles/components/sections/hero-section.css (подключать его опционально на внутренние страницы) -->
-            <section class="hero-section main__hero-section">
+            <section class="hero-section main__hero-section" id="topBlock">
                 <div class="my-container hero-section__container">
                     <div class="hero-section__body">
                         <div class="hero-section__title"> частные детские сады. <br> центр развития. <br> «семь звёзд»
