--- a/pages/article-page.html
+++ b/pages/article-page.html
@@ -355,7 +355,7 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/kindergarten-page/hero-section/block-img.png" alt=""
+                            <img src="../assets/images/pages/article-page/hero-section/block-img.png" alt=""
                                 class="hero-section__img">
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                 <div class="my-container image-text__container">
                     <div class="image-text__inner">
                         <div class="image-text__image-wrap">
-                            <img src="../assets/images/pages/news/news-list/news-list-img-1.jpg" alt="" class="image-text__image">
+                            <img src="../assets/images/pages/article-page/image-text/block-img.png" alt="" class="image-text__image">
                         </div>
                         <div class="image-text__texts">
                             <p class="image-text__text">Данные принципы успешно реализуются посредством проектного подхода – исследовательская деятельность, основанная на интересе детей. Взрослый является наставником и партнером. И&nbsp;высшая задача взрослого верить в&nbsp;ребенка, дать возможность проявиться ребенку, его истинному интересу и&nbsp;помочь выразить себя разными способами. Проектная деятельность предусматривает работу в команде, где&nbsp;воспитываются основы демократии, ребенок учится выражать свое мнение и&nbsp;слышать других. Только в обществе ребенок и взрослый могут в полной мере проявить личную и социальную ответственность.</p>
@@ -464,7 +464,7 @@
                                     <div class="swiper-slide many-images__swiper-slide">
                                         <div class="many-images__slide">
                                             <div class="many-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg"
+                                                <img src="../assets/images/pages/article-page/many-images/image-1.png"
                                                     alt="" class="many-images__slide-img">
                                             </div>
                                         </div>
@@ -472,7 +472,7 @@
                                     <div class="swiper-slide many-images__swiper-slide">
                                         <div class="many-images__slide">
                                             <div class="many-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg"
+                                                <img src="../assets/images/pages/article-page/many-images/image-2.png"
                                                     alt="" class="many-images__slide-img">
                                             </div>
                                         </div>
@@ -480,7 +480,7 @@
                                     <div class="swiper-slide many-images__swiper-slide">
                                         <div class="many-images__slide">
                                             <div class="many-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg"
+                                                <img src="../assets/images/pages/article-page/many-images/image-3.png"
                                                     alt="" class="many-images__slide-img">
                                             </div>
                                         </div>
@@ -551,7 +551,7 @@
                                     <div class="swiper-slide quote__swiper-slide">
                                         <div class="quote__slide">
                                             <div class="quote__slide-img-wrap">
-                                                <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg"
+                                                <img src="../assets/images/pages/article-page/quote/slide-1.png"
                                                     alt="" class="quote__slide-img">
                                             </div>
                                         </div>
@@ -559,7 +559,7 @@
                                     <div class="swiper-slide quote__swiper-slide">
                                         <div class="quote__slide">
                                             <div class="quote__slide-img-wrap">
-                                                <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg"
+                                                <img src="../assets/images/pages/article-page/quote/slide-2.png"
                                                     alt="" class="quote__slide-img">
                                             </div>
                                         </div>
@@ -567,7 +567,7 @@
                                     <div class="swiper-slide quote__swiper-slide">
                                         <div class="quote__slide">
                                             <div class="quote__slide-img-wrap">
-                                                <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg"
+                                                <img src="../assets/images/pages/article-page/quote/slide-3.png"
                                                     alt="" class="quote__slide-img">
                                             </div>
                                         </div>
