--- a/pages/news-page.html
+++ b/pages/news-page.html
@@ -340,7 +340,7 @@
                             <div class="hero-section__text">Реджио-подход зародился в небольшом городке Реджио Эмилия на севере Италии. Основатель и вдохновитель идей «100 языков ребенка» является Лорис Малагуцци. Ис&nbsp;уже на протяжении более 50 лет педагоги разных стран</div>
                         </div>
                         <div class="hero-section__desc-img-wrap">
-                            <img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="hero-section__desc-img">
+                            <img src="../assets/images/pages/news-page/hero-section/image-2.jpg" alt="" class="hero-section__desc-img">
                         </div>
                     </div>
                     <div class="hero-section__right-content">
@@ -358,7 +358,7 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="../assets/images/pages/kindergarten-page/hero-section/block-img.png" alt=""
+                            <img src="../assets/images/pages/news-page/hero-section/block-img.jpg" alt=""
                                 class="hero-section__img">
                         </div>
                     </div>
@@ -424,17 +424,17 @@
                                     <div class="swiper-wrapper news-info__swiper-wrapper">
                                         <div class="swiper-slide news-info__swiper-slide">
                                             <div class="news-info__slide"><img
-                                                    src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                                                    src="../assets/images/pages//news-page/news-info/slide-1.jpg" alt=""
                                                     class="news-info__slide-img"></div>
                                         </div>
                                         <div class="swiper-slide news-info__swiper-slide">
                                             <div class="news-info__slide"><img
-                                                    src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                                                    src="../assets/images/pages//news-page/news-info/slide-2.jpg" alt=""
                                                     class="news-info__slide-img"></div>
                                         </div>
                                         <div class="swiper-slide news-info__swiper-slide">
                                             <div class="news-info__slide"><img
-                                                    src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt=""
+                                                    src="../assets/images/pages//news-page/news-info/slide-3.jpg" alt=""
                                                     class="news-info__slide-img"></div>
                                         </div>
                                     </div>
@@ -492,21 +492,14 @@
                                         <div class="swiper-slide big-images__swiper-slide">
                                             <div class="big-images__slide">
                                                 <div class="big-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt="" class="big-images__slide-img">
+                                                <img src="../assets/images/pages/news-page/big-images/slide-1.jpg" alt="" class="big-images__slide-img">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="swiper-slide big-images__swiper-slide">
                                             <div class="big-images__slide">
-                                                <div class="big-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt="" class="big-images__slide-img">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide big-images__swiper-slide">
-                                            <div class="big-images__slide">
-                                                <div class="big-images__slide-img-wrap">
-                                                <img src="../assets/images/pages/blog/articles-list/article-img-2.jpg" alt="" class="big-images__slide-img">
+                                                <div class="big-images__slide-img-wrap --video-poster">
+                                                <img src="../assets/images/pages/news-page/big-images/slide-2.jpg" alt="" class="big-images__slide-img">
                                                 </div>
                                             </div>
                                         </div>
@@ -520,19 +513,19 @@
             <section class="many-images">
                 <div class="my-container many-images__container">
                     <div class="many-images__content">
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
-                        <div class="many-images__item"><img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-1.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-2.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item --video-poster"><img src="../assets/images/pages/news-page/many-images/image-3.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-4.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-5.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-6.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item --video-poster"><img src="../assets/images/pages/news-page/many-images/image-7.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-8.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-9.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-10.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-11.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item --video-poster"><img src="../assets/images/pages/news-page/many-images/image-12.jpg" alt="" class="many-images__item-img"></div>
+                        <div class="many-images__item"><img src="../assets/images/pages/news-page/many-images/image-13.jpg" alt="" class="many-images__item-img"></div>
                     </div>
                 </div>
             </section>
