--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <link rel="stylesheet" href="./styles/components/double-slider.css">
     <link rel="stylesheet" href="./styles/components/stories.css">
     <link rel="stylesheet" href="./styles/components/modal.css">
+    <link rel="stylesheet" href="./styles/components/button-up.css">
 
     <link rel="stylesheet" href="./styles/components/sections/branches-section.css">
     <link rel="stylesheet" href="./styles/components/sections/why-choose-us.css">
     <link rel="stylesheet" href="./styles/components/sections/staff-section.css">
     <link rel="stylesheet" href="./styles/components/sections/reviews.css">
     <link rel="stylesheet" href="./styles/components/sections/contacts-section.css">
-    <link rel="stylesheet" href="./styles/components/button-up.css">
     <link rel="stylesheet" href="./styles/components/sections/inspiration-section.css">
 
 
@@ -324,13 +324,14 @@
         <div class="my-overlay" id="burger-menu-overlay"></div>
 
         <!-- ЭТО ТОЖЕ ДОЛЖНО БЫТЬ В LAYOUT -->
-        <a href="" class="button-up">
+        <a href="#topBlock" class="button-up">
             <span class="button-up__img">
                 <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_18852_13195)">
-                        <circle cx="26" cy="26" r="25.5" transform="matrix(-1 0 0 1 52 0)" fill="white" stroke="#4E6932" />
-                        <path d="M36 31L27.7677 21.8137C26.7955 20.7288 25.2046 20.7288 24.2323 21.8137L16 31" stroke="#4E6932"
-                            stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                        <circle cx="26" cy="26" r="25.5" transform="matrix(-1 0 0 1 52 0)" fill="white"
+                            stroke="#4E6932" />
+                        <path d="M36 31L27.7677 21.8137C26.7955 20.7288 25.2046 20.7288 24.2323 21.8137L16 31"
+                            stroke="#4E6932" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
                     </g>
                     <defs>
                         <clipPath id="clip0_18852_13195">
@@ -2999,13 +3000,12 @@
 
     <script src="./assets/js/components/header.js"></script>
     <script src="./assets/js/components/button-up.js"></script>
+    <script src="./assets/js/components/stories.js"></script>
+    <script src="./assets/js/components/modal.js"></script>
 
     <script src="./assets/js/sections/staff.js"></script>
     <script src="./assets/js/sections/reviews.js"></script>
     <script src="./assets//js/sections/contacts.js"></script>
-
-    <script src="./assets/js/components/stories.js"></script>
-    <script src="./assets/js/components/modal.js"></script>
     
     
     <!-- СКИПТ ОТКРЫТИЯ ТУЛТИПА -->
