--- a/pages/development-center.html
+++ b/pages/development-center.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="../styles/components/footer.css">
     <link rel="stylesheet" href="../styles/components/feedback-block.css">
     <link rel="stylesheet" href="../styles/components/double-slider.css">
+    <link rel="stylesheet" href="../styles/components/button-up.css">
 
     <!-- вот этот компонент не подключать лучше к главной странице -->
     <link rel="stylesheet" href="../styles/components/sections/hero-section.css">
@@ -291,6 +292,25 @@
         </header>
 
         <div class="my-overlay" id="burger-menu-overlay"></div>
+
+        <!-- ЭТО ТОЖЕ ДОЛЖНО БЫТЬ В LAYOUT -->
+        <a href="#topBlock" class="button-up">
+            <span class="button-up__img">
+                <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_18852_13195)">
+                        <circle cx="26" cy="26" r="25.5" transform="matrix(-1 0 0 1 52 0)" fill="white"
+                            stroke="#4E6932" />
+                        <path d="M36 31L27.7677 21.8137C26.7955 20.7288 25.2046 20.7288 24.2323 21.8137L16 31"
+                            stroke="#4E6932" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_18852_13195">
+                            <rect width="52" height="52" fill="white" transform="matrix(-1 0 0 1 52 0)" />
+                        </clipPath>
+                    </defs>
+                </svg>
+            </span>
+        </a>
 
         <main class="main">
             <!-- СТИЛИ ВЫНЕС ОТДЕЛЬНО -->
@@ -1358,10 +1378,11 @@
     <script src="../assets/js/fancybox-init.js"></script>
 
     <script src="../assets/js/components/header.js"></script>
+    <script src="../assets/js/components/button-up.js"></script>
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
-    <script src="./assets//js/sections/contacts.js"></script>
+    <script src="../assets//js/sections/contacts.js"></script>
     
 
 
