--- a/pages/summer-holidays.html
+++ b/pages/summer-holidays.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="../styles/components/feedback-block.css">
     <link rel="stylesheet" href="../styles/components/stories.css">
     <link rel="stylesheet" href="../styles/components/double-slider.css">
-    <link rel="stylesheet" href="../styles/components/sections/simple-slider-section.css">
+    <link rel="stylesheet" href="../styles/components/button-up.css">
 
     <!-- вот этот компонент не подключать лучше к главной странице -->
     <link rel="stylesheet" href="../styles/components/sections/hero-section.css">
@@ -41,8 +41,8 @@
     <link rel="stylesheet" href="../styles/components/sections/reviews.css">
     <link rel="stylesheet" href="../styles/components/sections/feedback.css">
     <link rel="stylesheet" href="../styles/components/sections/contacts-section.css">
-    <link rel="stylesheet" href="../styles/components/button-up.css">
     <link rel="stylesheet" href="../styles/components/sections/inspiration-section.css">
+    <link rel="stylesheet" href="../styles/components/sections/simple-slider-section.css">
 
 
     <!-- СТИЛИ СТРАНИЦЫ -->
@@ -319,7 +319,7 @@
         <div class="my-overlay" id="burger-menu-overlay"></div>
 
         <!-- ЭТО ТОЖЕ ДОЛЖНО БЫТЬ В LAYOUT -->
-        <a href="#" class="button-up">
+        <a href="#topBlock" class="button-up">
             <span class="button-up__img">
                 <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_18852_13195)">
